Fix color button bug on mobile

--- a/assets/css/_global.scss
+++ b/assets/css/_global.scss
@@ -35,6 +35,7 @@
    transition: all 0.3s;
    text-transform: uppercase;
    letter-spacing: 0.5px;
+   color: $primary-color;
 }
 .btn--mega {
    &:hover {
